[package]
name = "arctree"
version = "0.1.0"
authors = [
    "Simon Sapin <simon.sapin@exyr.org>",
    "Yevhenii Reizner <razrfalcon@gmail.com>",
    "Youn Mélois <youn@melois.dev>",
]
license = "MIT"
description = "A 'DOM-like' tree implemented using atomic reference counting"
repository = "https://github.com/sehnryr/arctree"
documentation = "https://docs.rs/arctree/"
readme = "README.md"

[dependencies]
parking_lot = "0.12.1"
